# dd-physics

./: CMakeLists.txt
dataset/: all_core_citeseer_citation.txt  all_idn_citeseer_citation.txt
include/: graph.hpp  sis.hpp  timer.hpp  utility.hpp
src/: graph.cpp  main.cpp  sis.cpp  timer.cpp
